commited lambda function sort list by breed cats